# tenderfit

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/: config.toml
.codex/skills/add-agent/: SKILL.md
.codex/skills/add-eval/: SKILL.md
.codex/skills/add-tool/: SKILL.md
.codex/skills/frontend-design/: SKILL.md
.codex/skills/scaffold-mvp/: SKILL.md
docs/: AGENTS.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  CLI_DEMO.md  DATA_SOURCES.md  DEMO.md  EVAL.md  PRD.md  PROMPTS.md  REQUIREMENTS.md  ROADMAP.md  SECURITY_COMPLIANCE.md  TOOLS_AND_SKILLS.md  WEBUI_DEMO.md
examples/: company_profile.enterprise.json  company_profile.example.json  company_profile.midsize.json
schemas/: citations.schema.json  company_profile.schema.json  evidence_manifest.schema.json  scout_results.schema.json  tender_fit_report.schema.json  tender_requirements.schema.json  verifier_report.schema.json
scripts/: run_demo.sh
tenderfit/: __init__.py  app.py  cli.py  demo.py
tenderfit-ui/: index.html  package-lock.json  package.json
tenderfit-ui/src/: App.css  App.jsx
tenderfit/agents/: __init__.py  models.py  orchestrator.py  prompts.py
tenderfit/evals/: README.md  __init__.py
tenderfit/tools/: __init__.py  bidplus_collect_docs.py  bidplus_scout.py  cache.py  chunk_text.py  fetch_docs.py  parse_pdf.py  search_bids.py  validate_schema.py
tenderfit/web/: server.py  ui.html
tests/: test_bidplus_scout.py  test_tools_runtime.py
